# pyfonts

./: .coverage  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  req.py  requirements-dev.txt  requirements.py  requirements.txt  run-tests.sh  setup.py
.github/workflows/: test.yml
.streamlit/: config.toml
docs/: PyFonts.py  ui.py  utils.py
lazyfont/: main.py  utils.py
pyfont/: __init__.py  utils.py
pyfonts/: __init__.py  find_the_font.py  get_font.py  is_valid.py  main.py  preview_font.py  utils.py
requirements/: requirements.py
tests/: test_add_font_locally.py  test_download_font.py  test_get_font.py  test_is_url.py  test_is_valid.py  test_is_valid_font_url.py  test_load_font.py  test_preview_font.py
