[project]
name = "pyfonts"
version = "0.0.1"
authors = [
  { name="Joseph Barbier", email="joseph.barbierdarnal@gmail.com" },
]
description = "A simple way to load fonts for matplotlib"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Framework :: Matplotlib"
]
dependencies = [
  "matplotlib"
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project.urls]
Homepage = "https://github.com/JosephBARBIERDARNAL/pyfonts"
Issues = "https://github.com/JosephBARBIERDARNAL/pyfonts/issues"
